--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: fraud-detection-api
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: ./build.sh
     startCommand: gunicorn app.api:app
     envVars:
       - key: PYTHON_VERSION
-        value: 3.10.0
+        value: 3.9.16
