--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
+# Use specific versions that have pre-built wheels
 flask==2.0.1
-torch>=2.0.0
-numpy==1.21.0
-pandas==1.3.0
-scikit-learn==0.24.2
-joblib==1.0.1
-xgboost==1.4.2
-lightgbm==3.2.1
-catboost==0.26.1
+# Use a newer version of NumPy that has pre-built wheels for Python 3.11
+numpy==1.24.3
+pandas==1.5.3
+scikit-learn==1.2.2
+joblib==1.2.0
+torch==2.0.1
+xgboost==1.7.5
+lightgbm==3.3.5
+catboost==1.2.0
 gunicorn==20.1.0
