--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 flask==2.0.1
 Werkzeug==2.0.1
-numpy==1.22.4  # Change from 1.24.3 to 1.22.4
+numpy==1.26.4
 pandas==1.5.3
 scikit-learn==1.2.2
 joblib==1.2.0
